<?xml version="1.0" encoding="utf-8"?>
<resources>
    <string name="app_name">ft_hangouts</string>

    <!-- Main Activity -->
    <string name="contacts">Contacts</string>
    <string name="no_contacts">No contacts yet</string>
    <string name="add_contact">Add contact</string>

    <!-- Contact Form -->
    <string name="first_name">First name</string>
    <string name="last_name">Last name</string>
    <string name="phone">Phone</string>
    <string name="email">Email</string>
    <string name="address">Address</string>
    <string name="save">Save</string>
    <string name="delete">Delete</string>
    <string name="cancel">Cancel</string>
    <string name="edit_contact">Edit contact</string>
    <string name="new_contact">New contact</string>
    <string name="phone_required">Phone number is required</string>
    <string name="contact_saved">Contact saved</string>
    <string name="contact_deleted">Contact deleted</string>

    <!-- Contact Detail -->
    <string name="contact_details">Contact details</string>
    <string name="send_message">Send message</string>
    <string name="edit">Edit</string>

    <!-- Conversation -->
    <string name="conversation">Conversation</string>
    <string name="type_message">Type a message</string>
    <string name="send">Send</string>
    <string name="message_sent">Message sent</string>
    <string name="message_failed">Failed to send message</string>
    <string name="no_messages">No messages yet</string>

    <!-- Menu -->
    <string name="header_color">Header color</string>
    <string name="color_blue">Blue</string>
    <string name="color_green">Green</string>
    <string name="color_red">Red</string>
    <string name="color_purple">Purple</string>
    <string name="color_orange">Orange</string>

    <!-- Background time -->
    <string name="app_was_in_background">App was in background since: %s</string>

    <!-- Permissions -->
    <string name="sms_permission_required">SMS permission is required</string>

    <!-- Delete confirmation -->
    <string name="delete_contact_title">Delete contact?</string>
    <string name="delete_contact_message">Are you sure you want to delete this contact?</string>
</resources>
